--- a/todo-server/docker-compose.yml
+++ b/todo-server/docker-compose.yml
@@ -1,8 +1,9 @@
-version: "3"
+version: "3.8"
 services:
   mysql:
     container_name: mysql
     image: mysql/mysql-server:latest
+    platform: linux/amd64
     environment:
       MYSQL_ROOT_PASSWORD: root_pw
       MYSQL_DATABASE: sample
